Avance de insertar usuarios

--- a/ORUSCURSO.csproj
+++ b/ORUSCURSO.csproj
@@ -50,10 +50,12 @@
     <Compile Include="Datos\CONEXIONMAESTRA.cs" />
     <Compile Include="Datos\Dasistencias.cs" />
     <Compile Include="Datos\Dcargos.cs" />
+    <Compile Include="Datos\Dmodulos.cs" />
     <Compile Include="Datos\Dpersonal.cs" />
     <Compile Include="Logica\Bases.cs" />
     <Compile Include="Logica\Lasistencias.cs" />
     <Compile Include="Logica\Lcargos.cs" />
+    <Compile Include="Logica\Lmodulos.cs" />
     <Compile Include="Logica\Lpersonal.cs" />
     <Compile Include="Presentacion\CtlUsuarios.cs">
       <SubType>UserControl</SubType>
@@ -164,6 +166,33 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\rosa.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\buscar %281%291.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Trinaranja.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\palanca-de-mando.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\nuclear.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\fuego %281%29.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\extraterrestre.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\comenzar.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\animal.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\foto %281%29.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
