--- a/ORUSCURSO.csproj
+++ b/ORUSCURSO.csproj
@@ -128,6 +128,9 @@
     <EmbeddedResource Include="Presentacion\AsistenteInstalacion\InstalacionBd.resx">
       <DependentUpon>InstalacionBd.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Presentacion\AsistenteInstalacion\UsuariosPrincipal.resx">
+      <DependentUpon>UsuariosPrincipal.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Presentacion\CtlUsuarios.resx">
       <DependentUpon>CtlUsuarios.cs</DependentUpon>
     </EmbeddedResource>
